--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,144 @@
-tiktoken
-faiss-cpu
-langchain
-PyPDF2
-python-dotenv
-streamlit
+aiohappyeyeballs==2.4.2
+aiohttp==3.10.8
+aiosignal==1.3.1
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.6.0
+asgiref==3.8.1
+attrs==24.2.0
+backoff==2.2.1
+bcrypt==4.2.0
+blinker==1.8.2
+build==1.2.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+chroma-hnswlib==0.7.6
+chromadb==0.5.11
+click==8.1.7
+coloredlogs==15.0.1
+dataclasses-json==0.6.7
+Deprecated==1.2.14
+distro==1.9.0
+durationpy==0.7
+faiss-cpu==1.8.0.post1
+fastapi==0.115.0
+filelock==3.16.1
+flatbuffers==24.3.25
+frozenlist==1.4.1
+fsspec==2024.9.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.35.0
+googleapis-common-protos==1.65.0
+greenlet==3.1.1
+grpcio==1.66.2
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.2
+huggingface-hub==0.25.1
+humanfriendly==10.0
+idna==3.10
+importlib_metadata==8.4.0
+importlib_resources==6.4.5
+Jinja2==3.1.4
+jiter==0.5.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+kubernetes==31.0.0
+langchain==0.3.1
+langchain-chroma==0.1.4
+langchain-community==0.3.1
+langchain-core==0.3.6
+langchain-openai==0.2.1
+langchain-text-splitters==0.3.0
+langsmith==0.1.129
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.22.0
+mdurl==0.1.2
+mmh3==5.0.1
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+narwhals==1.8.4
+numpy==1.26.4
+oauthlib==3.2.2
+onnxruntime==1.19.2
+openai==1.50.2
+opentelemetry-api==1.27.0
+opentelemetry-exporter-otlp-proto-common==1.27.0
+opentelemetry-exporter-otlp-proto-grpc==1.27.0
+opentelemetry-instrumentation==0.48b0
+opentelemetry-instrumentation-asgi==0.48b0
+opentelemetry-instrumentation-fastapi==0.48b0
+opentelemetry-proto==1.27.0
+opentelemetry-sdk==1.27.0
+opentelemetry-semantic-conventions==0.48b0
+opentelemetry-util-http==0.48b0
+orjson==3.10.7
+overrides==7.7.0
+packaging==24.1
+pandas==2.2.3
+pillow==10.4.0
+pip-autoremove==0.10.0
+pip-check==2.9
+posthog==3.6.6
+protobuf==4.25.5
+pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.9.2
+pydantic-settings==2.5.2
+pydantic_core==2.23.4
+pydeck==0.9.1
+Pygments==2.18.0
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+PyYAML==6.0.2
+referencing==0.35.1
+regex==2024.9.11
+requests==2.32.3
+requests-oauthlib==2.0.0
+rich==13.8.1
+rpds-py==0.20.0
+rsa==4.9
+setuptools==75.1.0
+shellingham==1.5.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+SQLAlchemy==2.0.35
+starlette==0.38.6
+streamlit==1.38.0
+sympy==1.13.3
+tenacity==8.5.0
+terminaltables==3.1.10
+tiktoken==0.7.0
+tokenizers==0.20.0
+toml==0.10.2
+tornado==6.4.1
+tqdm==4.66.5
+typer==0.12.5
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.31.0
+uvloop==0.20.0
+watchdog==4.0.2
+watchfiles==0.24.0
+websocket-client==1.8.0
+websockets==13.1
+wheel==0.44.0
+wrapt==1.16.0
+yarl==1.13.1
+zipp==3.20.2
