--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,7 @@ durationpy==0.7
 faiss-cpu==1.8.0.post1
 fastapi==0.115.0
 filelock==3.16.1
+Flask==3.0.3
 flatbuffers==24.3.25
 frozenlist==1.4.1
 fsspec==2024.9.0
@@ -42,6 +43,7 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.4.0
 importlib_resources==6.4.5
+itsdangerous==2.2.0
 Jinja2==3.1.4
 jiter==0.5.0
 jsonpatch==1.33
@@ -49,10 +51,10 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 kubernetes==31.0.0
-langchain==0.3.1
+langchain==0.3.2
 langchain-chroma==0.1.4
 langchain-community==0.3.1
-langchain-core==0.3.6
+langchain-core==0.3.9
 langchain-openai==0.2.1
 langchain-text-splitters==0.3.0
 langsmith==0.1.129
@@ -97,6 +99,7 @@ pydantic-settings==2.5.2
 pydantic_core==2.23.4
 pydeck==0.9.1
 Pygments==2.18.0
+pypdf==5.0.1
 PyPDF2==3.0.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
@@ -138,6 +141,7 @@ watchdog==4.0.2
 watchfiles==0.24.0
 websocket-client==1.8.0
 websockets==13.1
+Werkzeug==3.0.4
 wheel==0.44.0
 wrapt==1.16.0
 yarl==1.13.1
