--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ humanfriendly==10.0
 idna==3.10
 importlib_metadata==8.4.0
 importlib_resources==6.4.5
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 jiter==0.5.0
@@ -89,6 +90,7 @@ pandas==2.2.3
 pillow==10.4.0
 pip-autoremove==0.10.0
 pip-check==2.9
+pluggy==1.5.0
 posthog==3.6.6
 protobuf==4.25.5
 pyarrow==17.0.0
@@ -103,6 +105,7 @@ pypdf==5.0.1
 PyPDF2==3.0.1
 PyPika==0.48.9
 pyproject_hooks==1.2.0
+pytest==8.3.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
@@ -121,7 +124,6 @@ smmap==5.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.35
 starlette==0.38.6
-streamlit==1.38.0
 sympy==1.13.3
 tenacity==8.5.0
 terminaltables==3.1.10
